fix overflow issues with accordion focus

--- a/src/styles/inputs.css
+++ b/src/styles/inputs.css
@@ -53,7 +53,6 @@ input.is-invalid:focus {
   transition: none !important;
 
   /* has parents with overflow hidden */
-  .accordion summary&,
   table & {
     outline-offset: calc(-1 * var(--border-width));
   }
